# Web-Crawler-BiztelAI-Technologies-

./: README.md  entrypoint.py  flask_app.py  gunicorn_app.py  main.py  pyproject.toml  wsgi.py
app/: api.py  crawler.py  database.py  exceptions.py  models.py  schemas.py
tests/: test_crawler.py
